# llm-scenario-modelling

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
01_scenario_modeling/notebooks/: 01_scenario_modeling_walkthrough.ipynb
01_scenario_modeling/src/: modeler.py  scenario_analyst.py
02_insight_extraction/notebooks/: 02_insight_extraction_walkthrough.ipynb
02_insight_extraction/src/: extractor.py
03_strategic_dashboard/notebooks/: 03_dashboard_walkthrough.ipynb
03_strategic_dashboard/src/: app.py
04_documentation/architecture/: ai_integration.md  system_architecture.md
04_documentation/guides/: presenting_this_project.md  quickstart.md
04_documentation/training/: how_to_extend.md
notebooks/: 00_project_overview.ipynb
shared/: __init__.py
shared/config/: loader.py  settings.yaml
shared/data_generation/: generate.py
shared/utils/: llm_client.py  plotting.py  processing.py
